--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,10 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "node_modules/primeng/resources/themes/lara-dark-teal/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
+              
             ],
             "scripts": [],
             "server": "src/main.server.ts",
@@ -41,13 +44,13 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
-                  "maximumError": "1MB"
+                 "maximumWarning": "1.2mb",
+                 "maximumError": "1.3mb"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kB",
-                  "maximumError": "4kB"
+                  "maximumWarning": "2mb",
+                 "maximumError": "2.5mb"
                 }
               ],
               "outputHashing": "all"
@@ -97,5 +100,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "7677ef24-5ad2-474e-bfc0-9c8957c45786"
   }
 }
