--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.11",
+    "@material/snackbar": "^14.0.0",
     "express": "^4.18.2",
+    "firebase": "^11.0.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^17.18.11",
+    "react-native-snackbar": "^2.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
